# loristrck-old

./: .gitignore  CMakeLists.txt  README.rst  setup.py
loristrck/: __init__.py  _core.pyx  lorisdefs.cpp  lorisdefs.pxd  lorisdefs.pyx
src/loris/: .#aclocal.m4  Makefile  config.h  config.status  libtool
src/loris/csound/: Makefile
src/loris/doc/: Makefile
src/loris/doc/html/: a00001.html  a00002.html  a00002.js  a00003.html  a00003.js  a00004.html  a00004.js  a00005.html  a00005.js  a00006.html  a00006.js  a00007.html  a00007.js  a00008.html  a00008.js  a00009.html  a00009.js  a00010.html  a00010.js  a00011.html  a00011.js  a00012.html  a00012.js  a00013.html  a00013.js  a00014.html  a00014.js  a00015.html  a00015.js  a00016.html  a00016.js  a00017.html  a00017.js  a00018.html  a00018.js  a00019.html  a00019.js  a00020.html  a00020.js  a00021.html  (+396 more)
src/loris/scripting/: Makefile  loris.py
src/loris/src/: Makefile  libloris.la
src/loris/test/: Makefile
src/loris/utils/: Makefile  loris-dilate  loris-mark  loris-spewmarkers  loris-synthesize  loris-unmark
